crates/cherry-pit-projection/tests/compile_fail/projection_not_object_safe.stderr
error[E0038]: the trait `Projection` is not dyn compatible
  --> tests/compile_fail/projection_not_object_safe.rs:14:19
   |
14 | fn _erase(_p: Box<dyn Projection>) {}
   |                   ^^^^^^^^^^^^^^ `Projection` is not dyn compatible
   |
   = note: the trait is not dyn compatible because it requires `Self: Sized`
   = note: for a trait to be dyn compatible it needs to allow building a vtable
           for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
